--- a/Holidaysss/Resoruces/es-419.lproj/Localizable.strings
+++ b/Holidaysss/Resoruces/es-419.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 
 "holidays" = "Feriados";
 "today" = "Hoy";
-"dayLefts" = "Días faltantes";
+"dayLefts" = "%d días faltantes";
 "passed" = "Este día ya paso";
