Add config view

--- a/Holidaysss/Resoruces/en-US.lproj/Localizable.strings
+++ b/Holidaysss/Resoruces/en-US.lproj/Localizable.strings
@@ -6,4 +6,8 @@
 "inalienable" = "Inalienable";
 "addNotificationMessage" = "Added remider for this holiday";
 "deleteNotificationMessage" = "Deleted remider";
+"ReportBug" = "Report a Bug";
+"FeedbackSupport" = "Feedback & Support";
+"PrivacyPolicy" = "Privacy Policy";
+"Settings" = "Settings";
 
