--- a/Holidaysss/Resoruces/es-419.lproj/Localizable.strings
+++ b/Holidaysss/Resoruces/es-419.lproj/Localizable.strings
@@ -6,3 +6,7 @@
 "inalienable" = "Irrenunciable";
 "addNotificationMessage" = "Se ha agregado el recordatorio de este feriado";
 "deleteNotificationMessage" = "Se ha eliminado el recordatorio";
+"ReportBug" = "Reportar un problema";
+"FeedbackSupport" = "Recomendacion y/o Soporte";
+"PrivacyPolicy" = "Politica de Privacidad";
+"Settings" = "Configuración";
